syntax = "proto3";
package ni.measurementlink.measurement.tests;

message NIDCPowerConfigurations {
    repeated string pin_names = 1;
    double current_limit = 2;
    bool multi_session = 3;
}

message NIDCPowerOutputs {
    repeated string session_names = 1;
    repeated string resource_names = 2;
    repeated string channel_lists = 3;
    repeated string connected_channels = 4;
    repeated double voltage_measurements = 5;
    repeated double current_measurements = 6;
}
